--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web developer located in the Skopje area. Passionate about digital experiences and impactful identities."
     />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
