Add meta tags for SEO optimization

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web developer located in the Skopje area. Passionate about digital experiences and impactful identities."
     />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="keywords"
+      content="Simona Anchova, portfolio, projects, developer, software, web, design, digital, experiences, impactful, identities"
+    />
+
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Simona Anchova</title>
